# toyMC

./: CMakeLists.txt  Makefile  OUTPUT.txt  main.cpp
include/: GeneratingHits.h  ToyAnalysis.h
src/: GeneratingHits.cpp  ToyAnalysis.cpp
